fix popup and main body spacing

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -23,7 +23,7 @@
 }
 
 .main {
-  padding-top: $header-height ;
+  padding-top: ($header-height - 25px) ;
   z-index: 1;
   position: relative;
 }
